--- a/WhatToEatToday/src/main/resources/application.yml
+++ b/WhatToEatToday/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:h2:tcp://localhost/~/whatToEatToday
-    username: sa
-    password: 123
+    username: hj
+    password: hj
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
