--- a/WhatToEatToday/src/main/resources/application.yml
+++ b/WhatToEatToday/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 spring:
   datasource:
     url: jdbc:h2:tcp://localhost/~/whatToEatToday
-    username: sa
-    password: 123
+    username: root
+    password: 
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
-  # show_sql: true
+        # show_sql: true
         format_sql: true
 logging.level:
   org.hibernate.SQL: debug
