--- a/WhatToEatToday/src/main/resources/application.yml
+++ b/WhatToEatToday/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     url: jdbc:h2:tcp://localhost/~/whatToEatToday
 
-    username: root  
-    password: 
+    username: hj
+    password: hj
 
     driver-class-name: org.h2.Driver
   jpa:
