--- a/WhatToEatToday/src/main/resources/application.yml
+++ b/WhatToEatToday/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
     url: jdbc:h2:tcp://localhost/~/whatToEatToday
-    username: root  
-    password: 
+    username: sa
+    password: 123
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate:
         # show_sql: true
